<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_large"
    android:layout_marginEnd="@dimen/margin_large"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AboutFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/information"
        android:src="@drawable/ic_information" />

    <TextView
        android:id="@+id/about_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:lineSpacingExtra="10sp"
        android:text="@string/about_app_text"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/creator_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:text="@string/created_by_DPG"
        android:textAlignment="center" />

</LinearLayout>