<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.e.smashbrostrivia.TitleFragment"
        android:label="@string/smash_bros_trivia"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.e.smashbrostrivia.GameFragment"
        android:label="@string/smash_bros_trivia"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:enterAnim="@anim/scale_up" />
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:enterAnim="@anim/slide_in" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.e.smashbrostrivia.GameOverFragment"
        android:label="@string/smash_bros_trivia"
        tools:layout="@layout/fragment_game_over" >
        <action
            android:id="@+id/action_gameOverFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="com.e.smashbrostrivia.GameWonFragment"
        android:label="@string/smash_trivia"
        tools:layout="@layout/fragment_game_won" >
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
        <argument
            android:name="numberOfQuestions"
            app:argType="integer" />
        <argument
            android:name="numberCorrect"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.e.smashbrostrivia.AboutFragment"
        android:label="@string/about_trivia"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.e.smashbrostrivia.RulesFragment"
        android:label="fragment_rules"
        tools:layout="@layout/fragment_rules" />
</navigation>